# IntakeInformer

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/intakeinformer/: __init__.py  data_fetching.py  data_processing.py  intakeinformer.py  main_functions.py  visualization.py
src/intakeinformer/data/: dri_combined.pkl
tests/: test_calculate_calories_from_selection.py  test_extract_nutrients.py  test_get_user_food_selection.py  test_get_user_life_stage.py  test_intakeinformer.py  test_main_functions.py
